syntax = "proto3";

package calculator;

service CalculatorService{
  // Unary API
  rpc Sum (SumRequest) returns (SumResponse) {}

  // Server Streaming API
  rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {}

  // Client Streaming API
  rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {}

  // BiDi Streaming API
  rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse) {}

  // Error Handling Demo
  // This RPC call will throw an exception if the sent number is negative for example -1
  rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {}
}

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 prime_factor = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  float average = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 maximum = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  float number_root = 1;
}
